--- a/fetch_gases_official_IN.ipynb
+++ b/fetch_gases_official_IN.ipynb
@@ -22,7 +22,7 @@
    "source": [
     "## Code Flow\n",
     "\n",
-    "### Install Dependicies"
+    "### Install Dependencies"
    ]
   },
   {
@@ -228,7 +228,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.8.8 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -243,6 +243,11 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.8.8"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "7758e92e9a61d7a3490898707f7eeb937c85e9d1e8d4e877cc6c187218f226d5"
+   }
   }
  },
  "nbformat": 4,
